apps/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: apps
spec:
  selector:
    app: bitwarden
  ports:
    - name: http
      port: 8080
      targetPort: http
